# littlefs

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  linux.cmake  main.c  start.vcxproj  start.vcxproj.filters  win32.cmake
FAL/: CMakeLists.txt
FAL/Cfg/: fal_cfg.h
FAL/Port/: fal_port.c  fal_port.h  littlefs_fal_port.c  littlefs_fal_port.h
FAL/Source/: fal_partition.c
LittleFs/: CMakeLists.txt
LittleFs/Cfg/: littlefs_cfg.h
LittleFs/Inc/: app.h  lfs.h
LittleFs/Port/: lfs_free.c  lfs_malloc.c  littlefs_fal_port.h  littlefs_port.c  littlefs_ram_port.c  littlefs_ram_port.h
LittleFs/Source/: lfs.c  lfs.h  lfs_util.c  lfs_util.h
LittleFs/Source/api/: lfs_dir_close.c  lfs_dir_open.c  lfs_dir_read.c  lfs_dir_rewind.c  lfs_dir_seek.c  (+24 more)
Win32/: CMakeLists.txt
app/: dumplfs.c  main.c
embOS/: CMakeLists.txt
embOS/Application/: OS_Mutexes.c
embOS/SEGGER/: Release_SEGGERLib.html  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_Win32.h
inc/: RTOS.h  UDPCOM.h  lfs.h
littlefs/api/: lfs_dir_close.c  lfs_dir_open.c  lfs_dir_read.c  lfs_dir_rewind.c  lfs_dir_seek.c  lfs_dir_tell.c  lfs_file_close.c  lfs_file_open.c  lfs_file_opencfg.c  lfs_file_read.c  lfs_file_rewind.c  lfs_file_seek.c  lfs_file_size.c  lfs_file_sync.c  lfs_file_tell.c  lfs_file_truncate.c  lfs_file_write.c  lfs_format.c  lfs_fs_size.c  lfs_fs_traverse.c  lfs_getattr.c  lfs_mkdir.c  lfs_mount.c  lfs_remove.c  lfs_removeattr.c  lfs_rename.c  lfs_setattr.c  lfs_stat.c  lfs_unmount.c
littlefs/app/: OS_Main.c
littlefs/inc/: lfs.h
littlefs/port/: lfs_erase.c  lfs_free.c  lfs_malloc.c  lfs_prog.c  lfs_read.c  lfs_sync.c
littlefs/tool/: dumplfs.c  mklfs.c
littlefs/util/: lfs_aligndown.c  lfs_alignup.c  lfs_max.c  lfs_min.c  lfs_npw2.c  lfs_popc.c
mklfs.img/: count.txt  hello.txt
(+218 files in other folders)
